--- a/app/src/main/res/layout/activity_sales.xml
+++ b/app/src/main/res/layout/activity_sales.xml
@@ -182,6 +182,7 @@
             </com.github.captain_miao.optroundcardview.OptRoundCardView>
 
             <com.github.captain_miao.optroundcardview.OptRoundCardView
+                android:id="@+id/grafikPemesanan"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
@@ -216,6 +217,7 @@
             </com.github.captain_miao.optroundcardview.OptRoundCardView>
 
             <com.github.captain_miao.optroundcardview.OptRoundCardView
+                android:id="@+id/grafikTotalOrder"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
