--- a/app/src/main/res/layout/depot_make_order.xml
+++ b/app/src/main/res/layout/depot_make_order.xml
@@ -95,9 +95,8 @@
             android:layout_marginTop="8dp"
             android:background="@drawable/et_background_plain"
             android:gravity="top|start"
-
             android:hint="Location"
-            android:inputType="number"
+            android:inputType="text"
             android:padding="10dp"
             android:textColor="@color/primaryText"
             android:textSize="15sp"
@@ -110,9 +109,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:background="@drawable/et_background_plain"
-            android:hint="Note"
             android:gravity="top|start"
-            android:inputType="number"
+            android:hint="Note"
+            android:inputType="text"
             android:padding="10dp"
             android:textColor="@color/primaryText"
             android:textSize="15sp"
