--- a/app/src/main/res/layout/depot_fragment.xml
+++ b/app/src/main/res/layout/depot_fragment.xml
@@ -66,6 +66,7 @@
                     app:layout_constraintTop_toTopOf="@+id/userImageView" />
 
                 <TextView
+                    android:id="@+id/right_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
@@ -97,6 +98,7 @@
                     app:layout_constraintTop_toTopOf="@+id/userImageView" />
 
                 <TextView
+                    android:id="@+id/left_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
