--- a/app/src/main/res/layout/activity_add_depot.xml
+++ b/app/src/main/res/layout/activity_add_depot.xml
@@ -77,7 +77,7 @@
                         android:text="@string/location"/>
 
                     <EditText
-                        android:id="@+id/address"
+                        android:id="@+id/addressEmployee"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
@@ -203,7 +203,8 @@
                         android:overScrollMode="never"
                         android:visibility="gone"
                         app:layout_constraintTop_toBottomOf="@id/mainImage"
-                        tools:listitem="@layout/item_image"/>
+                        tools:listitem="@layout/item_image"
+                        tools:ignore="MissingConstraints" />
 
                     <TextView
                         android:id="@+id/addPhoto"
@@ -225,7 +226,7 @@
             </com.github.captain_miao.optroundcardview.OptRoundCardView>
 
             <Button
-                android:id="@+id/registerButton"
+                android:id="@+id/buttonEmployee"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
