--- a/app/src/main/res/layout/fragment_my_employee.xml
+++ b/app/src/main/res/layout/fragment_my_employee.xml
@@ -19,7 +19,7 @@
         android:id="@+id/empty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/no_cars_posted_yet"
+        android:text="Anda Belum Menambahkan Data Karyawan"
         android:layout_centerInParent="true"
         android:visibility="gone"/>
 
