--- a/app/src/main/res/layout/fragment_my_konsumen.xml
+++ b/app/src/main/res/layout/fragment_my_konsumen.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragments.MyKonsumenFragment">
+    tools:context=".fragments.MyKonsumenRequestFragment">
 
     <com.cooltechworks.views.shimmer.ShimmerRecyclerView
         android:id="@+id/rv"
@@ -19,7 +19,7 @@
         android:id="@+id/empty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/no_cars_posted_yet"
+        android:text="@string/status_noKonsumen"
         android:layout_centerInParent="true"
         android:visibility="gone"/>
 
