--- a/app/src/main/res/layout/konsumen_item.xml
+++ b/app/src/main/res/layout/konsumen_item.xml
@@ -1,125 +1,201 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
     <data>
-
         <variable
             name="data"
-            type="com.rasyidabdulhalim.aquaza.models.User"/>
+            type="com.rasyidabdulhalim.aquaza.models.Konsumen"/>
 
         <variable
             name="callback"
-            type="com.rasyidabdulhalim.aquaza.callbacks.EmployeCallBack"/>
+            type="com.rasyidabdulhalim.aquaza.callbacks.KonsumenCallback"/>
 
         <variable
-            name="time"
-            type="String"/>
-
+            name="isKonsumen"
+            type="Boolean"/>
     </data>
-
-    <RelativeLayout
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/root"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:layout_marginBottom="2dp"
-        android:background="@android:color/white">
+        android:background="@android:color/white"
+        android:padding="5dp"
+        android:onClick="@{(v) -> callback.onClick(v, data)}">
 
-        <com.rasyidabdulhalim.aquaza.utils.SquareLayout
-            android:layout_width="80dp"
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/placeHolderCardView"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_marginEnd="10dp"
-            android:id="@+id/image_layout">
+            android:layout_margin="@dimen/space_4"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-
-            <ImageView
-                android:id="@+id/image"
+            <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:imageUrl="@{data.avatar}"
-                android:scaleType="centerCrop"
-                android:onClick="@{(v) -> callback.onClick(v, data)}"
-                tools:srcCompat="@tools:sample/avatars" />
+                android:layout_height="wrap_content">
 
-        </com.rasyidabdulhalim.aquaza.utils.SquareLayout>
+                <ImageView
+                    android:id="@+id/image"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginTop="5dp"
+                    android:onClick="@{(v) -> callback.onClick(v, data)}"
+                    android:scaleType="centerCrop"
+                    app:imageUrl="@{data.avatar}"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:srcCompat="@tools:sample/avatars" />
 
-        <TextView
-            android:id="@+id/name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/username"
-            android:textStyle="bold"
-            android:textColor="@android:color/black"
-            android:layout_toEndOf="@id/image_layout"
-            tools:text="Diego Dragnel"
-            android:text="@{data.name}"
-            />
+                <TextView
+                    android:id="@+id/nameRequest"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginTop="5dp"
+                    android:fontFamily="@font/roboto"
+                    android:text="@{data.name}"
+                    android:textAlignment="viewStart"
+                    android:textColor="@color/colorTextLight"
+                    android:textSize="@dimen/font_body_size"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:text="$ 40.50" />
 
-        <TextView
-            android:id="@+id/status"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toEndOf="@id/image_layout"
-            android:layout_below="@id/name"
-            android:layout_marginTop="3dp"
-            android:drawablePadding="5dp"
-            android:textColor="@color/secondaryText"
-            tools:text="rasyid@gmail.com"
-            android:text="@{data.status}"
-            />
+                <TextView
+                    android:id="@+id/textView1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="5dp"
+                    android:fontFamily="@font/roboto"
+                    android:text="Nama"
+                    android:textAlignment="viewStart"
+                    android:textColor="@color/colorTextLight"
+                    android:textSize="@dimen/font_body_size"
+                    app:layout_constraintStart_toEndOf="@+id/image"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toEndOf="@id/image_layout"
-            android:layout_below="@id/status"
-            android:layout_marginTop="3dp"
-            android:drawablePadding="5dp"
-            android:textColor="@color/secondaryText"
-            android:text="@{data.dateCreated}"
-            tools:text="Thursday 28, 9:00am"/>
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="4dp"
+                    android:fontFamily="@font/roboto"
+                    android:text="Email"
+                    android:textAlignment="viewStart"
+                    android:textColor="@color/colorTextLight"
+                    android:textSize="@dimen/font_body_size"
+                    app:layout_constraintStart_toEndOf="@+id/image"
+                    app:layout_constraintTop_toBottomOf="@+id/textView1" />
 
-        <TextView
-            android:id="@+id/mydepot"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toEndOf="@id/image_layout"
-            android:layout_below="@id/date"
-            android:layout_marginTop="3dp"
-            android:drawablePadding="5dp"
-            android:textColor="@color/secondaryText"
-            android:text="@{data.mydepot + ` ` + data.myshift}"
-            tools:text="Di Tempatkan diCabang 1"/>
+                <TextView
+                    android:id="@+id/textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:fontFamily="@font/roboto"
+                    android:text="Alamat"
+                    android:textAlignment="viewStart"
+                    android:textColor="@color/colorTextLight"
+                    android:textSize="@dimen/font_body_size"
+                    app:layout_constraintStart_toEndOf="@+id/image"
+                    app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
-        <Button
-            android:id="@+id/editEmp"
-            android:layout_width="wrap_content"
-            android:layout_height="37dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="101dp"
-            android:layout_marginTop="-5dp"
-            android:layout_marginEnd="4dp"
-            android:text="Konfirmasi"
-            android:onClick="@{(v) -> callback.onClick(v, data)}"
-            />
+                <TextView
+                    android:id="@+id/emailRequest"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="8dp"
+                    android:fontFamily="@font/roboto"
+                    android:text="@{data.email}"
+                    android:textAlignment="viewStart"
+                    android:textColor="@color/md_light_blue_A700"
+                    android:textSize="@dimen/font_body_size"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/nameRequest"
+                    tools:text="Pending" />
 
-        <Button
-            android:id="@+id/PecatEmp"
-            android:layout_width="wrap_content"
-            android:layout_height="37dp"
-            android:layout_below="@+id/editEmp"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="75dp"
-            android:layout_marginTop="6dp"
-            android:layout_marginEnd="5dp"
-            android:text="Batalkan"
-            android:onClick="@{(v) -> callback.onClick(v, data)}"
-            />
+                <TextView
+                    android:id="@+id/addressRequest"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:fontFamily="@font/roboto"
+                    android:text="@{data.address}"
+                    android:textAlignment="viewStart"
+                    android:textColor="@color/green"
+                    android:textSize="@dimen/font_body_size"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/emailRequest"
+                    app:layout_constraintVertical_bias="0.0"
+                    tools:text="Diego" />
 
-    </RelativeLayout>
+                <LinearLayout
+                    android:id="@+id/buttons_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="5dp"
+                    android:orientation="horizontal"
+                    android:weightSum="4"
+                    app:layout_constraintTop_toBottomOf="@+id/image">
 
+                    <Button
+                        android:id="@+id/cancel"
+                        android:layout_width="0dp"
+                        android:layout_height="35dp"
+                        android:layout_marginStart="5dp"
+                        android:layout_marginEnd="5dp"
+                        android:layout_weight="1.3"
+                        android:onClick="@{(v) -> callback.onClick(v, data)}"
+                        android:textAllCaps="false"
+                        android:textColor="@android:color/white"
+                        android:background="@drawable/rounded_button"
+                        android:text="Hapus" />
+
+                    <Button
+                        android:id="@+id/action"
+                        android:layout_width="0dp"
+                        android:layout_height="35dp"
+                        android:layout_marginEnd="5dp"
+                        android:layout_weight="1.3"
+                        android:onClick="@{(v) -> callback.onClick(v, data)}"
+                        android:textAllCaps="false"
+                        android:textColor="@android:color/white"
+                        android:background="@drawable/rounded_button"
+                        android:text="Konfirmasi" />
+
+                    <Button
+                        android:id="@+id/contact"
+                        android:layout_width="0dp"
+                        android:layout_height="35dp"
+                        android:layout_marginStart="5dp"
+                        android:layout_weight="1.3"
+                        android:onClick="@{(v) -> callback.onClick(v, data)}"
+                        android:textAllCaps="false"
+                        android:textColor="@android:color/white"
+                        android:background="@drawable/rounded_button"
+                        android:text="Chat User" />
+
+
+                </LinearLayout>
+            </android.support.constraint.ConstraintLayout>
+        </android.support.v7.widget.CardView>
+
+
+    </android.support.constraint.ConstraintLayout>
 </layout>
+
