--- a/app/src/main/res/layout/activity_add_depot.xml
+++ b/app/src/main/res/layout/activity_add_depot.xml
@@ -58,7 +58,7 @@
                         android:text="Nama Cabang Baru"/>
 
                     <EditText
-                        android:id="@+id/depotName"
+                        android:id="@+id/nameNewDepot"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
@@ -77,7 +77,7 @@
                         android:text="@string/location"/>
 
                     <EditText
-                        android:id="@+id/addressEmployee"
+                        android:id="@+id/locationNewDepot"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
@@ -133,7 +133,7 @@
                         android:text="@string/desc"/>
 
                     <EditText
-                        android:id="@+id/desc"
+                        android:id="@+id/message"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
@@ -226,7 +226,7 @@
             </com.github.captain_miao.optroundcardview.OptRoundCardView>
 
             <Button
-                android:id="@+id/buttonEmployee"
+                android:id="@+id/buttonNotification"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
