--- a/app/src/main/res/layout/activity_add_employee.xml
+++ b/app/src/main/res/layout/activity_add_employee.xml
@@ -78,7 +78,7 @@
                     android:textSize="13sp" />
 
                 <EditText
-                    android:id="@+id/addressEmployee"
+                    android:id="@+id/locationNewDepot"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
@@ -241,7 +241,7 @@
                     </LinearLayout>
 
                     <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
-                        android:id="@+id/buttonEmployee"
+                        android:id="@+id/buttonNotification"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
