--- a/app/src/main/res/layout/depot_activity.xml
+++ b/app/src/main/res/layout/depot_activity.xml
@@ -278,7 +278,7 @@
                         app:layout_constraintTop_toTopOf="@+id/textView102" />
 
                     <EditText
-                        android:id="@+id/addressEmployee"
+                        android:id="@+id/locationNewDepot"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
