--- a/app/src/main/res/layout/depot_make_order.xml
+++ b/app/src/main/res/layout/depot_make_order.xml
@@ -26,7 +26,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/tvlocation"
+            android:id="@+id/tvtype"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
@@ -56,7 +56,7 @@
             android:text="Note"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/orderLocation" />
+            app:layout_constraintTop_toBottomOf="@+id/typenotification" />
 
         <EditText
             android:id="@+id/orderQuantity"
@@ -89,7 +89,7 @@
             app:layout_constraintTop_toTopOf="@+id/orderQuantity" />
 
         <EditText
-            android:id="@+id/orderLocation"
+            android:id="@+id/typenotification"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -101,7 +101,7 @@
             android:textColor="@color/primaryText"
             android:textSize="15sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvlocation" />
+            app:layout_constraintTop_toBottomOf="@+id/tvtype" />
 
         <EditText
             android:id="@+id/noteOrder"
