--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -39,7 +39,7 @@
     <color name="md_red_A200">#FF5252</color>
     <color name="md_red_A400">#FF1744</color>
     <color name="md_red_A700">#D50000</color>
-
+    <color name="timeColor">#A6616161</color>
     <!-- pink -->
     <color name="md_pink_50">#FCE4EC</color>
     <color name="md_pink_100">#F8BBD0</color>
