--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -29,5 +29,13 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
 
+    <dimen name="notif_summary">15.5sp</dimen>
+
+    // Views
+    <dimen name="avatar">35dp</dimen>
+    <dimen name="notif_padding_v">10dp</dimen>
+    <dimen name="notif_padding_h">10dp</dimen>
+    <dimen name="small_padding">5dp</dimen>
+
 
 </resources>
