--- a/app/src/main/res/layout/chat_item.xml
+++ b/app/src/main/res/layout/chat_item.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
         <variable
             name="data"
-            type="com.rasyidabdulhalim.aquaza.models.Chat"/>
+            type="com.rasyidabdulhalim.aquaza.models.Chat" />
 
         <variable
             name="time"
-            type="String"/>
+            type="String" />
 
         <variable
             name="callback"
