--- a/app/src/main/res/layout/depot_fragment.xml
+++ b/app/src/main/res/layout/depot_fragment.xml
@@ -41,9 +41,7 @@
                     android:layout_marginTop="@dimen/space_24"
                     android:layout_marginEnd="@dimen/space_8"
                     android:layout_marginBottom="@dimen/space_24"
-                    android:focusable="true"
-                    android:focusableInTouchMode="true"
-                    android:src="@drawable/app_logo"
+                    android:src="@drawable/app_logo_transparancy"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
