--- a/app/src/main/res/layout/activity_add_employee.xml
+++ b/app/src/main/res/layout/activity_add_employee.xml
@@ -45,7 +45,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:layout_below="@id/loginIcon"
+                    android:layout_below="@id/toolbar"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
                     android:textSize="20sp"
