--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <color name="colorPrimary">#727BFA</color> <!-- 9B59B6 -->
     <!--<color name="colorPrimaryDark">#ac1900</color>-->
-    <color name="colorPrimaryDark">#000000</color>
     <color name="colorPrimaryLight">#343436</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#0C90F1</color>
+    <color name="colorPrimaryDark">#0591F8</color>
+    <color name="colorAccent">#0C90F1</color>
     <color name="inactiveColor">#8c8c8c</color>
     <color name="secondaryText">#D9757575</color>
     <color name="textGray">#616161</color>
@@ -16,6 +15,10 @@
     <color name="lightGray">#e6e6e6</color>
     <color name="pink">#ec407a</color>
     <color name="red">#e53935</color>
+
+
+    <color name="primary_text_color">#363A43</color>
+    <color name="secondary_text_color">#7A8089</color>
 
     <!-- Line -->
 
