--- a/app/src/main/res/layout/depot_fragment.xml
+++ b/app/src/main/res/layout/depot_fragment.xml
@@ -160,7 +160,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:text="@string/no_cars_uploaded_yet"
+                android:text="Depot Belum Tersedia"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
